# PyVRP

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  LICENSE  LICENSE.md  README.md  SOLVER_ARCHITECTURE.md  build.py  build_extension.py  build_extension_wrapper.py  build_extensions.py  codecov.yaml  extract_docstrings.py  gcovr.cfg  hgs.py  make_native_docs.py  meson.build  meson_options.txt  pyproject.toml  setup.cfg  test.sol
hgs/: CMakeLists.txt
hgs/include/: CommandLine.h  Config.h  GeneticAlgorithm.h  Individual.h  LocalSearch.h  Matrix.h  Node.h  Params.h  PenaltyManager.h  Population.h  ProblemData.h  Result.h  Route.h  Statistics.h  TimeWindowSegment.h  XorShift128.h  crossover.h
hgs/include/operators/: Exchange.h  LocalSearchOperator.h  MoveTwoClientsReversed.h  RelocateStar.h  SwapStar.h
hgs/include/params/: GeneticAlgorithmParams.h  LocalSearchParams.h  PenaltyParams.h  PopulationParams.h  SolverParams.h
hgs/include/stop/: MaxIterations.h  MaxRuntime.h  NoImprovement.h  StoppingCriterion.h  TimedNoImprovement.h
hgs/src/: CMakeLists.txt  GeneticAlgorithm.cpp  Individual.cpp  LocalSearch.cpp  Node.cpp  Params.cpp  PenaltyManager.cpp  Population.cpp  ProblemData.cpp  Result.cpp  Route.cpp  Statistics.cpp  TimeWindowSegment.cpp  bindings.cpp  main.cpp
hgs/src/crossover/: crossover.cpp  selectiveRouteExchange.cpp
hgs/src/diversity/: brokenPairsDistance.cpp
hgs/src/operators/: Exchange.cpp  MoveTwoClientsReversed.cpp  RelocateStar.cpp  SwapStar.cpp  TwoOpt.cpp
hgs/src/python/: CMakeLists.txt  bind_Exchange.cpp  bind_GeneticAlgorithm.cpp  bind_GeneticAlgorithmParams.cpp  bind_Individual.cpp  bind_LocalSearch.cpp  bind_LocalSearchOperator.cpp  bind_LocalSearchParams.cpp  bind_MaxIterations.cpp  bind_MaxRuntime.cpp  bind_MoveTwoClientsReversed.cpp  bind_NoImprovement.cpp  bind_PenaltyManager.cpp  bind_PenaltyParams.cpp  bind_Population.cpp  bind_PopulationParams.cpp  bind_ProblemData.cpp  bind_RelocateStar.cpp  bind_Result.cpp  bind_Statistics.cpp  bind_StoppingCriterion.cpp  bind_SwapStar.cpp  bind_TimedNoImprovement.cpp  bind_TwoOpt.cpp  bind_XorShift128.cpp  bind_crossover.cpp  bind_diversity.cpp  bindings.cpp  bindings.h
hgs/test/: .gitignore  CMakeLists.txt  test_CommandLine.cpp  test_Individual.cpp  test_Matrix.cpp  test_Params.cpp  test_PenaltyManager.cpp  test_Population.cpp  test_ProblemData.cpp  test_TimeWindowSegment.cpp  test_XorShift128.cpp
hgs/test/data/: DepotNotOne.txt  FileWithUnknownSection.txt  NonZeroDepotDemand.txt  NonZeroDepotOpenTimeWindow.txt  NonZeroDepotReleaseTime.txt  NonZeroDepotServiceDuration.txt  ORTEC-VRPTW-ASYM-4c69f727-d1-n204-k12.txt  OkSmall.txt  TimeWindowOpenEqualToClose.txt  TimeWindowOpenLargerThanClose.txt  UnknownEdgeWeightFmt.txt  UnknownEdgeWeightType.txt
hgs/test/diversity/: CMakeLists.txt  test_brokenPairsDistance.cpp
hgs/test/stop/: CMakeLists.txt  test_MaxIterations.cpp  test_MaxRuntime.cpp  test_NoImprovement.cpp  test_TimedNoImprovement.cpp
pyvrp/cpp/: .clang-format  .gitignore  Activity.cpp  Activity.h  CMakeLists.txt  Client.cpp  Client.h  ClientGroup.cpp  ClientGroup.h  CostEvaluator.cpp  CostEvaluator.h  CostEvaluator_bindings.cpp  Depot.cpp  Depot.h  DistanceSegment.cpp  DistanceSegment.h  DurationCostFunction.cpp  DurationCostFunction.h  DurationSegment.cpp  DurationSegment.h  DynamicBitset.cpp  DynamicBitset.h  DynamicBitset_bindings.cpp  Individual.cpp  Individual.h  Individual_bindings.cpp  LoadSegment.cpp  LoadSegment.h  Location.cpp  Location.h  Matrix.cpp  Matrix.h  Matrix_bindings.cpp  Measure.h  Measure_bindings.cpp  PenaltyManager.cpp  PenaltyManager.h  PenaltyManager_bindings.cpp  PiecewiseLinearFunction.cpp  PiecewiseLinearFunction.h  (+33 more)
pyvrp/cpp/crossover/: alternating_exchange.cpp  bindings.cpp  crossover.cpp  crossover.h  make_giant_tour.cpp  ordered_crossover.cpp  ordered_crossover.h  ordered_exchange.cpp  selective_route_exchange.cpp  selective_route_exchange.h  selective_route_exchange_bindings.cpp  split_giant_tour.cpp
pyvrp/cpp/diversity/: bindings.cpp  broken_pairs_distance.cpp  broken_pairs_distance_bindings.cpp  different_neighbours.cpp  diversity.h
pyvrp/cpp/educate/: CircleSector.h  Exchange.cpp  Exchange.h  Exchange_bindings.cpp  LocalSearch.cpp  LocalSearch.h  LocalSearchOperator.h  LocalSearch_bindings.cpp  MoveTwoClientsReversed.cpp  MoveTwoClientsReversed.h  MoveTwoClientsReversed_bindings.cpp  Node.cpp  Node.h  RelocateStar.cpp  RelocateStar.h  RelocateStar_bindings.cpp  Route.cpp  Route.h  SwapStar.cpp  SwapStar.h  SwapStar_bindings.cpp  TwoOpt.cpp  TwoOpt.h  TwoOpt_bindings.cpp
pyvrp/cpp/include/: Individual.h  LocalSearch.h  LocalSearchParams.h  MaxIterations.h  MaxRuntime.h  PenaltyManager.h  PenaltyParams.h  Population.h  PopulationParams.h  ProblemData.h  RelocateStar.h  StoppingCriterion.h  TwoOpt.h  XorShift128.h
pyvrp/cpp/perturb/: DestroyOperator.h  DestroyRepair.cpp  DestroyRepair.h  DestroyRepairOperator.h  GreedyRepair.cpp  GreedyRepair.h  NeighbourRemoval.cpp  NeighbourRemoval.h  RepairOperator.h  bindings.cpp
pyvrp/cpp/repair/: bindings.cpp  greedy_repair.cpp  greedy_repair.h  nearest_route_insert.cpp  nearest_route_insert.h  repair.cpp  repair.h
pyvrp/cpp/search/: ChangeVehicleType.cpp  ChangeVehicleType.h  CircleSector.h  ClientSegment.h  DeliverySegment.h  DepotSegment.h  DestroyOperator.h  DestroyRepair.cpp  DestroyRepair.h  Exchange.h  ExchangeStar.h  Exchange_bindings.cpp  InsertOptional.cpp  InsertOptional.h  InsertOptionalClient.cpp  InsertOptionalClient.h  InsertOptionalShipment.cpp  InsertOptionalShipment.h  LocalSearch.cpp  LocalSearch.h  LocalSearchOperator.h  LocalSearch_bindings.cpp  MoveTwoClientsReversed.cpp  MoveTwoClientsReversed.h  MoveTwoClientsReversed_bindings.cpp  NeighbourRemoval.cpp  NeighbourRemoval.h  Node.cpp  Node.h  OptionalInsert.cpp  OptionalInsert.h  PerturbationManager.cpp  PerturbationManager.h  PerturbationOperator.h  PickupSegment.h  RelocateStar.cpp  RelocateStar.h  RelocateWithDepot.cpp  RelocateWithDepot.h  RemoveAdjacentDepot.cpp  (+48 more)
(+503 files in other folders)
