option(
    'problem',
    type: 'combo',
    value: 'vrptw',
    choices: ['cvrp', 'vrptw'], 
    description: 'Problem configuration to compile.'
)

option(
    'precision',
    type: 'combo',
    value: 'integer',
    choices: ['integer', 'double'], 
    description: 'Precision type to compile.'
)

option(
    'consistency_checks',
    type: 'boolean',
    value: true,
    description: 'Enable or disable consistency checks.'
)
